feat: add regioin to dwh.cfg, add setup_redshift.py and shutdown_redshift.py. Add create_tables.py and associated cd_table_queries.py for setting up reshift.

--- a/aws_redshift/dwh.cfg
+++ b/aws_redshift/dwh.cfg
@@ -12,7 +12,7 @@ DWH_IAM_ROLE_NAME        = dwhRole
 DWH_CLUSTER_IDENTIFIER   = dwhCluster
 
 [ETL]
-DWH_ENDPOINT           =
+DWH_ENDPOINT           = <update-endpoint>
 DWH_DB                 = dwh_db
 DWH_DB_USER            = dwh_user
 DWH_DB_PASSWORD        = DWH_password2019
@@ -25,7 +25,8 @@ DB_NAME                  = dwh_db
 DB_USER                  = dwh_user
 DB_PASSWORD              = DWH_password2019
 DB_PORT                  = 5439
+DWH_REGION               = eu-west-1
 
 [ENDPOINT]
 DWH_ENDPOINT             =
-DWH_ROLE_ARN             = arn:aws:iam::859170016386:role/dwhRole
+DWH_ROLE_ARN             = <updatee-iam-role>
