chore: fix typo

--- a/aws_redshift/dwh.cfg
+++ b/aws_redshift/dwh.cfg
@@ -29,4 +29,4 @@ DWH_REGION               = eu-west-1
 
 [ENDPOINT]
 DWH_ENDPOINT             =
-DWH_ROLE_ARN             = <updatee-iam-role>
+DWH_ROLE_ARN             = <update-iam-role>
