--- a/aws_redshift/dwh-template.cfg
+++ b/aws_redshift/dwh-template.cfg
@@ -12,7 +12,7 @@ DWH_IAM_ROLE_NAME        = dwhRole
 DWH_CLUSTER_IDENTIFIER   = dwhCluster
 
 [ETL]
-DWH_ENDPOINT           = <update-endpoint>
+DWH_ENDPOINT           = <update-dwh-endpoint>
 DWH_DB                 = dwh_db
 DWH_DB_USER            = dwh_user
 DWH_DB_PASSWORD        = DWH_password2019
@@ -20,7 +20,7 @@ DWH_PORT               = 5439
 
 # for later inspection and analysis
 [DWH]
-HOST                     = <update-endpoint>
+HOST                     = <update-dwh-endpoint>
 DB_NAME                  = dwh_db
 DB_USER                  = dwh_user
 DB_PASSWORD              = DWH_password2019
@@ -28,5 +28,5 @@ DB_PORT                  = 5439
 DWH_REGION               = eu-west-1
 
 [ENDPOINT]
-DWH_ENDPOINT             =
-DWH_ROLE_ARN             = <update-iam-role>
+DWH_ENDPOINT             = <update-dwh-endpoint>
+DWH_ROLE_ARN             = <update-dwh-role>
