--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ astroid==1.6.3
 astropy==3.0.2
 atomicwrites==1.3.0
 attrs==18.1.0
+awscli==1.16.253
 Babel==2.5.3
 backcall==0.1.0
 bcrypt==3.1.6
@@ -24,7 +25,7 @@ bleach==2.1.3
 bokeh==0.12.16
 boto==2.48.0
 boto3==1.9.205
-botocore==1.12.205
+botocore==1.12.243
 Bottleneck==1.2.1
 cached-property==1.5.1
 celery==4.3.0
@@ -165,6 +166,7 @@ psutil==5.6.2
 psycopg2-binary==2.8.3
 ptyprocess==0.6.0
 py==1.8.0
+pyasn1==0.4.7
 pycparser==2.19
 pydeepl==0.13
 Pygments==2.3.1
@@ -183,6 +185,7 @@ pytest-openfiles==0.3.2
 pytest-remotedata==0.3.1
 python-daemon==2.1.2
 python-dateutil==2.8.0
+python-dotenv==0.10.3
 python-editor==1.0.4
 python3-openid==3.1.0
 pytz==2019.1
@@ -191,6 +194,7 @@ PyYAML==3.13
 pyzmq==18.0.0
 qtconsole==4.5.4
 requests==2.21.0
+rsa==3.4.2
 ruamel-yaml==0.15.46
 s3transfer==0.2.1
 scipy==1.2.1
